# PulseConvolution

./: CMakeLists.txt  README.md  conv_opencl.hpp  main.cpp
opencl_compile/: inputFile.cl  oclProgramFileToString.py  outputFile.cpp  run.sh
